working on coverage and mutation testing of family package
integration tests have been moved to a separate folder

Signed-off-by: Davide Basile <davide.basile@isti.cnr.it>